[package]
name = "zad2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
reqwest = "0.11.14"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tera = "1.18.0"
futures = "0.3.27"
rand = "0.8.5"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"